--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "googleapis": "^92.0.0",
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
