--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "googleapis": "^92.0.0",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "sanitize-html": "^2.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
